fix a bug in the users page

--- a/src/Components/userBody.scss
+++ b/src/Components/userBody.scss
@@ -111,6 +111,7 @@
             font-weight: 400;
             font-size: 0.875rem;
             color: variables.$secondary-color;
+            background-color: transparent;
           }
         }
         button {
