--- a/src/Components/detail.scss
+++ b/src/Components/detail.scss
@@ -45,6 +45,7 @@
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     border-radius: 4px;
     padding: 1rem;
+
     .person {
       display: flex;
       justify-content: space-between;
@@ -74,6 +75,12 @@
       justify-content: space-between;
       align-items: center;
       width: 100%;
+      gap: 1rem;
+      word-wrap: break-word;
+      p {
+        font-size: 0.7rem;
+        padding: 0;
+      }
     }
   }
   .body-wrapper {
@@ -120,6 +127,14 @@
     width: 70vw;
     margin-left: 15rem;
     padding: 2rem 0;
+    .detail {
+      .title {
+        p {
+          font-size: 1rem;
+          font-weight: 400;
+        }
+      }
+    }
     .body-wrapper {
       .body {
         .personal {
