store users data in local storage

--- a/src/Components/detail.scss
+++ b/src/Components/detail.scss
@@ -51,6 +51,7 @@
       justify-content: space-between;
       align-items: center;
       padding-bottom: 1.5rem;
+      gap: 1rem;
 
       //   .name {
       text-align: left;
